trunk/Archive2/6b/d6c40c545fc112/output
main.cpp:30:10: error: conversion from 'int' to non-scalar type 'test {aka A<int, B<int, void> >}' requested
 test x = 1;
          ^
